--- a/style_index.css
+++ b/style_index.css
@@ -1,154 +1,146 @@
-/* meta {
-  display: none;
-  } */
+html, body {
+    width: 100%;
+    height: 100%
+}
+.box {
+    background: #000;
+}
+
+.boxsmallsc{
+    background-color: rgb(0, 0, 0);
+    background-image: url('immagini/earth.png');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 200%;
+}
+.sfondo{
+    background-image: url('immagini/palazzi2.png');
+    background-size: cover;
+    background-position: bottom;
+}
+.navbar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1rem 1.25rem 1.875rem 1.25rem;
+    display: flex;
+    align-items: center;
+    transition: 0.3s ease-out;
+    box-sizing: border-box;
+    backdrop-filter: blur(0.5rem) brightness(1.2);
+    -webkit-backdrop-filter: blur(0.5rem) brightness(1.2);
+    text-shadow: 0 0 0.313rem rgba(0, 0, 0, 0.5);
+    color: white;
+    font-size: 1.125rem;
+    
+    &.mask {
+      top: 9.375rem;
+      mask-image: linear-gradient(black 70%, transparent);
+      -webkit-mask-image: linear-gradient(black 70%, transparent);
+    }
+  
+  
+    @media (min-width: 640px) {
+      padding: 1rem 3.125rem 1.875rem 3.125rem;
+    }
+}
+  
+.navbar.is-hidden {
+    transform: translateY(-100%);
+}
+  
+.collegamento{
+    color: inherit;
+    text-decoration: none;
+  
+    &:hover,
+    &:focus {
+      text-decoration: underline;
+    }
+}
+  
+.menu-options {
+    margin-left: auto;
+}
+
+.word-offset {
+    margin-right: 3.125rem;
+}
+  
+.menu {
+    display: inline-block;
+    padding: 0;
+    font-size: 0;
+    background: none;
+    border: none;
+    margin-left: 1.25rem;
+    filter: drop-shadow(0 0 5px rgba(0, 0, 0, .5));
+  
+    &::before {
+      content: url("data:image/svg+xml, %3Csvg%20xmlns=%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox=%270%200%2024.8%2018.92%27%20width=%2724.8%27%20height=%2718.92%27%3E%3Cpath%20d=%27M23.8,9.46H1m22.8,8.46H1M23.8,1H1%27%20fill=%27none%27%20stroke=%27%23fff%27%20stroke-linecap=%27round%27%20stroke-width=%272%27%2F%3E%3C%2Fsvg%3E")
+    }
+  
+    @media (min-width: 640px) {
+      display: none;
+    }
+}
+  
+.titolo-principale {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    text-align: center;
+    font-size: 9.375rem;
+    margin-left: 0.938rem;
+}
+
+.titolo-princ-smallsc{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    text-align: center;
+    font-size: 175%;
+    margin-top: 1.25rem;
+}
+
+.earth{
+    margin-top: -1.25rem;
+}
 
 .scrolling-image {
-  display: block;
-  /*margin-top: 200px;*/
-  /*opacity: 0; */
-  transition: opacity 1s ease;
-  /* Transizione di opacità con durata di 1 secondo */
-  position: fixed;
-  height: 90%;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  bottom: 0px;
-  right: 0px;
+    display: block;
+    transition: opacity 1s ease;
+    position: fixed;
+    height: 90%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    bottom: 0rem;
+    right: 0rem;
 }
-
-body {
-  background-color: black;
-  background-image: url('immagini/earth.png');
-  /*height: 100%;
-    width: 90%;*/
-
-  /*Center and scale the image nicely*/
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-size: 100%;
-}
-
-.palazzi {
-  /*background-image: url('earth.png');*/
-  height: 90%;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-}
-
-.titolo-principale {
-  /*margin-top: 200px;*/
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 150px;
-  color: white;
-  text-align: center;
-}
-
-
 
 .testo {
-  /*font-family: "Times New Roman", Times, serif;*/
-  /*font-family: "Courier New", monospace;*/
-  font-family: "Consolas", monospace;
-  /*font-size: larger;*/
-  color: white;
-  background-color: rgba(163, 58, 244, 0.336);
-  padding: 20px;
-
+    font-family: "Consolas", monospace;
+    color: white;
+    padding: 1.25rem;
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 16px 20px 30px 20px;
-  display: flex;
-  align-items: center;
-  transition: 0.3s ease-out;
-  box-sizing: border-box;
-  backdrop-filter: blur(8px) brightness(1.2);
-  -webkit-backdrop-filter: blur(8px) brightness(1.2);
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-  color: white;
-  font-size: 18px;
-  
-  &.mask {
-    top: 150px;
-    mask-image: linear-gradient(black 70%, transparent);
-    -webkit-mask-image: linear-gradient(black 70%, transparent);
-  }
-
-
-  @media (min-width: 640px) {
-    padding: 16px 50px 30px 50px;
-  }
+.testosmallsc{
+    color: white;
+    font-size: 100%;
 }
 
-nav.is-hidden {
-  transform: translateY(-100%);
+.boxtesto{
+    background-color:rgba(163, 58, 244, 0.171);
+    border:5px solid rgba(163, 58, 244, 0.247);
+    border-radius: 0.5rem;
+}
+.boxtestosmallsc{
+    border:1px solid  rgba(163, 58, 244, 0.952);
+    background-color:rgba(16, 1, 27, 0.527);
+    border-radius: 0.5rem;
+    padding: 0.188rem 0.125rem 0.188rem 0.125rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
 
-  &:hover,
-  &:focus {
-    text-decoration: underline;
-  }
-}
 
-.menu-options {
-  margin-left: auto;
-}
-.word-offset {
-  margin-right: 50px;
-}
 
-/*
-.list {
-  list-style-type: none;
-  margin-left: auto;
-  display: none;
-
-  @media (min-width: 640px) {
-    display: flex;
-  }
-
-  li {
-    margin-left: 20px;
-
-  }
-}
-*/
-
-.menu {
-  display: inline-block;
-  padding: 0;
-  font-size: 0;
-  background: none;
-  border: none;
-  margin-left: 20px;
-  filter: drop-shadow(0 0 5px rgba(0, 0, 0, .5));
-
-  &::before {
-    content: url("data:image/svg+xml, %3Csvg%20xmlns=%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox=%270%200%2024.8%2018.92%27%20width=%2724.8%27%20height=%2718.92%27%3E%3Cpath%20d=%27M23.8,9.46H1m22.8,8.46H1M23.8,1H1%27%20fill=%27none%27%20stroke=%27%23fff%27%20stroke-linecap=%27round%27%20stroke-width=%272%27%2F%3E%3C%2Fsvg%3E")
-  }
-
-  @media (min-width: 640px) {
-    display: none;
-  }
-}
-
-.immagine {
-  height: 90%;
-  width: 100%;
-}
